5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1596_2895.log
== TEST (2019-03-21 18:39:18) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(int("digite um numero"))
frete=float(input("digite um numero"))
total= quantidade*valorunitario+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valorunitario=float(int("digite um numero"))
ValueError: invalid literal for int() with base 10: 'digite um numero'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:03) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total= quantidade*valorunitario+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*valorunitario+frete
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:31) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total= quantidade*valorunitario+frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*valorunitario+frete
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:52) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total= (quantidade*valorunitario+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= (quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:41) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total= float(int(quantidade*valorunitario+frete))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= float(int(quantidade*valorunitario+frete))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:45:50) 
-- CODE:
quantidade=int("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete))
print(total)
-- ERROR:
File "XXXX", line 4
    total=(quantidade*valorunitario+frete))
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:01) 
-- CODE:
quantidade=int("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade=int("digite um numero")
ValueError: invalid literal for int() with base 10: 'digite um numero'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:26) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:47) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=float(int(quantidade*valorunitario+frete))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(int(quantidade*valorunitario+frete))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:25) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete))
print(total)
-- ERROR:
File "XXXX", line 4
    total=(quantidade*valorunitario+frete))
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:50:35) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:51:35) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- EXECUTION TIME:
0.155731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    total=(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:52:55) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:08) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
print(quantidade*valorunitario+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:54:49) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
print("quantidade*valorunitario+frete")
-- OUTPUT:
quantidade*valorunitario+frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:55:19) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
print("quantidade*valorunitario+frete")
-- EXECUTION TIME:
0.189061
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade*valorunitario+frete
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade*valorunitario+frete
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade*valorunitario+frete
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:51) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=("quantidade*valorunitario+frete")
print(total)
-- OUTPUT:
quantidade*valorunitario+frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:56:08) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=("quantidade*valorunitario+frete")
print(total)
-- EXECUTION TIME:
0.170242
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade*valorunitario+frete
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade*valorunitario+frete
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade*valorunitario+frete
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:13) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=("quantidade*valorunitario+frete")
print(total)
-- OUTPUT:
quantidade*valorunitario+frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:56:57) 
-- CODE:
quantidade=input("digite um numero")
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(quantidade*valorunitario+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:00:18) 
-- CODE:
quantidade=int(input("digite um numero"))
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:00:29) 
-- CODE:
quantidade=int(input("digite um numero"))
valorunitario=float(input("digite um numero"))
frete=float(input("digite um numero"))
total=(quantidade*valorunitario+frete)
print(total)
-- EXECUTION TIME:
0.160101
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
